# maiyin_analysis

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/skills/trellis-brainstorm/: SKILL.md
.trellis/: .template-hashes.json  workflow.md
.trellis/scripts/common/: task_store.py
.trellis/spec/backend/: database-guidelines.md  index.md  quality-guidelines.md  tauri-contract.md
.trellis/spec/frontend/: index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/07-15-tauri-refactor-maiyin-analysis/: task.json
.trellis/tasks/07-16-fix-folder-recursive-import/: task.json
.trellis/tasks/07-22-add-result-filters-to-imported-records/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/07-22-fix-filter-popover-and-enhance-person-detail/: task.json
.trellis/tasks/07-22-fix-import-records-view-tabs/: task.json
.trellis/tasks/07-22-fix-session-delete/: task.json
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: area_codes.json  旅馆业数据导入模板.xlsx
src-tauri/src/: analysis.rs  commands.rs  error.rs  exporter.rs  importer.rs  lib.rs  main.rs  model.rs  storage.rs
src/api/: browserApi.ts  contract.ts  index.ts  tauriApi.ts
src/components/: Icon.tsx  RiskBadge.tsx  StatStrip.tsx
src/data/: demo.ts
src/domain/: types.ts
src/lib/: filter.test.ts  filter.ts  format.ts
(+58 files in other folders)
